# ht-illez

./: .gitmodules  CMakeLists.txt  Makefile  posedb.csv  run.sh  widgetik.ui
include/: ColorSegmentation.h  GeneralizedHough.h  HandTracker.h  ImageDescriptor.h  ImageRecorder.h  ImageSource.h  ImageSourceArtificial.h  ImageSourceCalibration.h  ImageSourceFreenect.h  ImageSourceOpenNI.h  Logger.h  MainWindow.h  PoseRecognition.h  PoseResultAnalyzer.h  Processing.h  Settings.h  Types.h  Util.h  WindowManager.h  iezProcess.h  main.h
scripts/: Findlog4cplus.cmake
src/: ColorSegmentation.cpp  GeneralizedHough.cpp  HandTracker.cpp  ImageDescriptor.cpp  ImageRecorder.cpp  ImageSource.cpp  ImageSourceArtificial.cpp  ImageSourceCalibration.cpp  ImageSourceFreenect.cpp  ImageSourceFreenect_private.h  ImageSourceOpenNI.cpp  Logger.cpp  MainWindow.cpp  PoseRecognition.cpp  PoseResultAnalyzer.cpp  Processing.cpp  Settings.cpp  Util.cpp  WindowManager.cpp  iezProcess.cpp  main.cpp
src/test/: PoseRecognitionTest.cpp  PoseResultAnalyzerTest.cpp
